# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-02-13 11:23:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-168

    Summary:
      cms, remove debugging line
    Revision:
      itools--main--0.12--patch-168


    modified files:
     Changelog cms/Metadata.py


2006-02-10 17:49:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-167

    Summary:
      merge fixes from the 0.13 branch (open/close resource protocol)
    Revision:
      itools--main--0.12--patch-167

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.13--patch-19
       merge fixes from the "nozodb" branch (open/close resource protocol)
    
     * jdavid@itaapy.com--public/itools--nozodb--0.13--patch-1
       handlers, fix transactions commit (open and close resources)
    
     * jdavid@itaapy.com--public/itools--nozodb--0.13--patch-3
       catalog, fix loading indexes (follow the open/close resource protocol)
    

    modified files:
     Changelog catalog/IIndex.py handlers/transactions.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.13--patch-19
     jdavid@itaapy.com--public/itools--nozodb--0.13--patch-1
     jdavid@itaapy.com--public/itools--nozodb--0.13--patch-3


2006-02-08 11:47:04 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-166

    Summary:
      web, work-around browsers with non-compliant If-Modified-Since header
    Revision:
      itools--main--0.12--patch-166

    Some browsers add a "length" parameter to the "If-Modified-Since"
    header, it is an extension to the HTTP 1.0 protocol by Netscape,
    see:
    
      http://www.squid-cache.org/mail-archive/squid-users/200307/0122.html

    modified files:
     Changelog web/headers.py


2006-02-07 19:16:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-165

    Summary:
      web.server, catch any errors in request parsing (returns bad request)
    Revision:
      itools--main--0.12--patch-165