@@ -1,15 +1,16 @@
 include *.txt
 include Changelog
 include resources/tests/index.html.en
-recursive-include xml test.rdf test*.xml simple.xml simple.xsd
-recursive-include i18n *.txt
 include LGPL-2.1
+include tmx/localizermsgs.tmx
+include xliff/gettext_en_es.xlf
+recursive-include xml test.rdf simple.xsd *.xml
+recursive-include i18n *.txt
 recursive-include catalog/tests *.txt
 recursive-include rss *.html *.rss *.xml
-include tmx/localizermsgs.tmx
 recursive-include workflow *.txt
-include xliff/gettext_en_es.xlf
 recursive-include cms/ui *.x*ml.??
+recursive-include cms/ui *.xml
 recursive-include cms/ui *.css
 recursive-include cms/ui *.js
 recursive-include cms/ui *.png
@@ -18,3 +19,4 @@ recursive-include cms/ui *.jpg
 recursive-include cms/locale *.mo
 recursive-include cms/locale *.po
 recursive-include cms/locale *.pot
+prune cms/ui/.arch-ids
